--- a/1. Responsive  Ecomerce Page - HTML,CSS,JS/index.html
+++ b/1. Responsive  Ecomerce Page - HTML,CSS,JS/index.html
@@ -71,6 +71,14 @@
         <a href="#">New Arrivals</a>
     </div>
 
+    <div class="body-container">
+
+        <header>
+            <div class="header">
+                <h1>Bella Online Shop</h1>
+            </div>
+        </header>
+
         <!-- page content -->
         <div class="container">
 
@@ -209,6 +217,7 @@
                 </div>
             </div>
         </div>
+    </div>
     <!-- footer -->
     <footer>
         <div class="footer">
