--- a/8. Responsive Fixed Navigation Bar - HTML, CSS, JS/index.html
+++ b/8. Responsive Fixed Navigation Bar - HTML, CSS, JS/index.html
@@ -18,12 +18,13 @@
             <div class="navbar-links" id="navbar-links">
                 <ul>
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">Products</a></li>
-                    <li><a href="#">Category</a></li>
+                    <li><a href="#">Products&#9652;</a></li>
+                    <li><a href="#">Category&#9662;</a></li>
                     <li class="dropdown">
-                        <a href="#" class="account-link">Account</a>
+                        <a href="#" class="account-link">Account&#9662</a>
                         <div class="dropdown-content">
                             <a href="#" class="login-button" id="login-button">Login</a>
+                            <hr>
                             <a href="#" class="register-button" id="signup-button">Signup</a>
                         </div>
                     </li>
