--- a/8. Responsive Fixed Navigation Bar - HTML, CSS, JS/index.html
+++ b/8. Responsive Fixed Navigation Bar - HTML, CSS, JS/index.html
@@ -18,8 +18,8 @@
             <div class="navbar-links" id="navbar-links">
                 <ul>
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">Products&#9652;</a></li>
-                    <li><a href="#">Category&#9662;</a></li>
+                    <li><a href="#">Products&#9662</a></li>
+                    <li><a href="#">Category&#9662</a></li>
                     <li class="dropdown">
                         <a href="#" class="account-link">Account&#9662</a>
                         <div class="dropdown-content">
