--- a/10. Responsive Ecommerce Website UI- HTML, CSS, JS/index.html
+++ b/10. Responsive Ecommerce Website UI- HTML, CSS, JS/index.html
@@ -119,11 +119,13 @@
                     </div>
                     <div class="card-text">
                         <h5>Name</h5>
-                        <p>$ 500</p>
+                        <p><span><strike>$500</strike></span> $700</p>
                         <div class="card-btn">
                             <button type="button">View</button>
                             <button type="button">Add to Cart</button>
                         </div>
+                        <div class="sales-badge">Sale</div>
+                        <div class="new-product">New</div>
                     </div>
                 </div>
                 <div class="product-card">
