modified:   10. Responsive Ecommerce Website UI- HTML, CSS, JS/index.html modified:   10. Responsive Ecommerce Website UI- HTML, CSS, JS/styles.css

--- a/10. Responsive Ecommerce Website UI- HTML, CSS, JS/index.html
+++ b/10. Responsive Ecommerce Website UI- HTML, CSS, JS/index.html
@@ -115,18 +115,26 @@
                 <!-- Product card -->
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="images/products/b2.png" alt="product" width="100%">
+                        <a href="product.html"><img src="images/products/b2.png" alt="product" width="100%"></a>
                     </div>
                     <div class="card-text">
-                        <h5>Name</h5>
-                        <p><span><strike>$500</strike></span> $700</p>
+                        <h4>Blue Canvas Shoes</h4> <br>
+                        <p>
+                            <strong>
+                                <span id="price"><strike>$ 700</strike></span>
+                                <span id="sale-price">$ 490</span>
+                            </strong>
+                        </p>
                         <div class="card-btn">
                             <button type="button">View</button>
                             <button type="button">Add to Cart</button>
                         </div>
-                        <div class="sales-badge">Sale</div>
-                        <div class="new-product">New</div>
                     </div>
+                    <div class="sales-badge">
+                        <p>Sale</p>
+                        <p id="percentage-discount">-30%</p>
+                    </div>
+                    <div class="new-product">New</div>
                 </div>
                 <div class="product-card">
                     <div class="product-image">
@@ -155,6 +163,7 @@
                     </div>
                 </div>
                 <div class="product-card">
+                    <div class="sales-badge">Sale</div>
                     <div class="product-image">
                         <img src="images/products/b2.png" alt="product" width="100%">
                     </div>
