modified:   10. Responsive Ecommerce Website UI- HTML, CSS, JS/index.html modified:   10. Responsive Ecommerce Website UI- HTML, CSS, JS/styles.css

--- a/10. Responsive Ecommerce Website UI- HTML, CSS, JS/index.html
+++ b/10. Responsive Ecommerce Website UI- HTML, CSS, JS/index.html
@@ -118,7 +118,7 @@
                         <a href="product.html"><img src="images/products/b2.png" alt="product" width="100%"></a>
                     </div>
                     <div class="card-text">
-                        <h4>Blue Canvas Shoes</h4> <br>
+                        <h4>Blue Canvas Shoes</h4>
                         <p>
                             <strong>
                                 <span id="price"><strike>$ 700</strike></span>
