new file:   10. Responsive Ecommerce Website UI- HTML, CSS, JS/images/products/sandals-587185_1280.jpg modified:   10. Responsive Ecommerce Website UI- HTML, CSS, JS/index.html modified:   10. Responsive Ecommerce Website UI- HTML, CSS, JS/product.css modified:   10. Responsive Ecommerce Website UI- HTML, CSS, JS/product.html

--- a/10. Responsive Ecommerce Website UI- HTML, CSS, JS/index.html
+++ b/10. Responsive Ecommerce Website UI- HTML, CSS, JS/index.html
@@ -18,7 +18,7 @@
                 </div>
                 <div class="navbar-links" id="navbar-links">
                     <ul>
-                        <li><a href="#">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="#">Products&#9652;</a></li>
                         <li><a href="#">Category&#9662;</a></li>
                         <li class="dropdown">
