--- a/10. Responsive Ecommerce Website UI- HTML, CSS, JS/product.html
+++ b/10. Responsive Ecommerce Website UI- HTML, CSS, JS/product.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Responsive Navigation Bar</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="product.css">
 </head>
 <body>
     <div class="body-container">
@@ -103,17 +104,41 @@
 
         <!-- Container -->
         <div class="container">
-            <!-- Header -->
-            <header>
-                <div class="header">
-                    <h1>Bells Online Shop</h1>
-                </div>
-            </header>
-
             <!-- Product Cart Container -->
-            <div class="products-container">
-                
-              </div>
+            <div class="product-container">
+                <div class="product-image-card">
+                    <div class="profile-image">
+                        <img src="images/products/sandals-587185_1280.jpg" alt="Product" width="100%">
+                    </div>
+                    <div class="product-images">
+                        <div class="imgs"><img src="images/products/p16.png" alt="Product" width="100%"></div>
+                        <div class="imgs"><img src="images/products/p16.png" alt="Product" width="100%"></div>
+                        <div class="imgs"><img src="images/products/p16.png" alt="Product" width="100%"></div>
+                        <div class="imgs"><img src="images/products/p16.png" alt="Product" width="100%"></div>
+                    </div>
+                </div>
+                <div class="product-information">
+                    <h3>LEVI'S WOMEN'S XL TRUCKER JACKET</h3>
+                    <h5>Price: $140 <del>$170</del></h5>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa accusantium, aspernatur provident beatae corporis veniam atque facilis, consequuntur assumenda, vitae dignissimos iste exercitationem dolor eveniet alias eos ullam nesciunt voluptatum.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore accusamus natus dolorum. Quaerat nulla quod doloremque, officia quis provident amet adipisci unde esse iure delectus, maxime inventore optio fuga nisi?</p>
+
+                    <div class="sizes">
+                        <p>Size:</p>
+                        <select name="Size" id="size" class="size-option">
+                            <option value="xxl">XXL</option>
+                            <option value="xl">XL</option>
+                            <option value="medium">Medium</option>
+                            <option value="small">Small</option>
+                        </select>
+                    </div>
+
+                    <div class="quantity">
+                        <input type="number" value="1" min="1">
+                        <button>Add to Cart</button>
+                    </div>
+                </div>
+            </div>
 
         <!-- Footer -->
         <div class="footer">
