modified:   10. Responsive Ecommerce Website UI- HTML, CSS, JS/index.html modified:   10. Responsive Ecommerce Website UI- HTML, CSS, JS/product.css modified:   10. Responsive Ecommerce Website UI- HTML, CSS, JS/product.html modified:   10. Responsive Ecommerce Website UI- HTML, CSS, JS/styles.css

--- a/10. Responsive Ecommerce Website UI- HTML, CSS, JS/index.html
+++ b/10. Responsive Ecommerce Website UI- HTML, CSS, JS/index.html
@@ -126,7 +126,7 @@
                             </strong>
                         </p>
                         <div class="card-btn">
-                            <button type="button">View</button>
+                            <a href="product.html"><button type="button">View</button></a>
                             <button type="button">Add to Cart</button>
                         </div>
                     </div>
