--- a/10. Responsive Ecommerce Website UI- HTML, CSS, JS/product.html
+++ b/10. Responsive Ecommerce Website UI- HTML, CSS, JS/product.html
@@ -19,7 +19,7 @@
                 </div>
                 <div class="navbar-links" id="navbar-links">
                     <ul>
-                        <li><a href="#">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="#">Products&#9652;</a></li>
                         <li><a href="#">Category&#9662;</a></li>
                         <li class="dropdown">
@@ -111,17 +111,18 @@
                         <img src="images/products/sandals-587185_1280.jpg" alt="Product" width="100%">
                     </div>
                     <div class="product-images">
-                        <div class="imgs"><img src="images/products/p16.png" alt="Product" width="100%"></div>
-                        <div class="imgs"><img src="images/products/p16.png" alt="Product" width="100%"></div>
-                        <div class="imgs"><img src="images/products/p16.png" alt="Product" width="100%"></div>
-                        <div class="imgs"><img src="images/products/p16.png" alt="Product" width="100%"></div>
+                        <div class="image"><img src="images/products/p16.png" alt="Product" width="100%"></div>
+                        <div class="image"><img src="images/products/p16.png" alt="Product" width="100%"></div>
+                        <div class="image"><img src="images/products/p16.png" alt="Product" width="100%"></div>
+                        <div class="image"><img src="images/products/p16.png" alt="Product" width="100%"></div>
                     </div>
                 </div>
                 <div class="product-information">
-                    <h3>LEVI'S WOMEN'S XL TRUCKER JACKET</h3>
-                    <h5>Price: $140 <del>$170</del></h5>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa accusantium, aspernatur provident beatae corporis veniam atque facilis, consequuntur assumenda, vitae dignissimos iste exercitationem dolor eveniet alias eos ullam nesciunt voluptatum.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore accusamus natus dolorum. Quaerat nulla quod doloremque, officia quis provident amet adipisci unde esse iure delectus, maxime inventore optio fuga nisi?</p>
+                    <h3>LEVI'S WOMEN'S XL TRUCKER JACKET</h3> 
+                    <h4>Price: <strike>$170</strike> $140</h4>
+                    <p>Lorem,  dolor eveniet alias eos ullam nesciunt voluptatum.</p>
+                    <p>Lorem ipsum dolor  delectus, maxime inventore optio fuga nisi?</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis repellat odit dolor incidunt quaerat quo saepe unde asperiores, consectetur eum esse, quam, impedit dolores vel ea. Iste, suscipit, nesciunt laboriosam cum officia magnam dolores pariatur qui labore totam eum a eveniet ullam optio expedita et possimus maxime saepe sunt quidem.</p>
 
                     <div class="sizes">
                         <p>Size:</p>
@@ -139,6 +140,7 @@
                     </div>
                 </div>
             </div>
+        </div>
 
         <!-- Footer -->
         <div class="footer">
