new file:   10. Responsive Ecommerce Website UI- HTML, CSS, JS/images/star_rate_FILL0_wght400_GRAD0_opsz24.svg new file:   10. Responsive Ecommerce Website UI- HTML, CSS, JS/images/star_rate_half_FILL0_wght400_GRAD0_opsz24.svg modified:   10. Responsive Ecommerce Website UI- HTML, CSS, JS/index.html modified:   10. Responsive Ecommerce Website UI- HTML, CSS, JS/styles.css

--- a/10. Responsive Ecommerce Website UI- HTML, CSS, JS/index.html
+++ b/10. Responsive Ecommerce Website UI- HTML, CSS, JS/index.html
@@ -125,6 +125,7 @@
                                 <span id="sale-price">$ 490</span>
                             </strong>
                         </p>
+                        <p class="star">&#9733;&#9733;&#9733;&#9733;&#9734;</p>
                         <div class="card-btn">
                             <a href="product.html"><button type="button">View</button></a>
                             <button type="button">Add to Cart</button>
