modified:   Responsive Fixed Navigation Bar and Fixed Mobile- Devices Footer - HTML, CSS, JS/css/main.css 	modified:   Responsive Fixed Navigation Bar and Fixed Mobile- Devices Footer - HTML, CSS, JS/index.html

--- a/Responsive Fixed Navigation Bar and Fixed Mobile- Devices Footer - HTML, CSS, JS/index.html
+++ b/Responsive Fixed Navigation Bar and Fixed Mobile- Devices Footer - HTML, CSS, JS/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="css/navbar.css">
 </head>
 <body>
-
+<div class="body-container">
     <nav>
         <div class="navbar">
             <div class="navbar-mobile">
@@ -51,6 +51,7 @@
     <section>
         <h3 class="section-title">Products</h3>
         <div class= "product-container">
+
             <div class="product-card">
                 <div class="product-image">
                     <img src="images/apples-805124.jpg" alt="" width="100%">
@@ -59,11 +60,103 @@
                     <p>Product 1</p>
                     <p>$ 300</p>
                 </div>
-                <div class="product-buttons">
+                <div class="card-buttons">
                     <a href="#"><button type="button">View</button></a>
                     <a href="#"><button type="button">Add to Cart</button></a>
                 </div>
             </div>
+            <div class="product-card">
+                <div class="product-image">
+                    <img src="images/apples-805124.jpg" alt="" width="100%">
+                </div>
+                <div class="product-information">
+                    <p>Product 1</p>
+                    <p>$ 300</p>
+                </div>
+                <div class="card-buttons">
+                    <a href="#"><button type="button">View</button></a>
+                    <a href="#"><button type="button">Add to Cart</button></a>
+                </div>
+            </div>
+            <div class="product-card">
+                <div class="product-image">
+                    <img src="images/apples-805124.jpg" alt="" width="100%">
+                </div>
+                <div class="product-information">
+                    <p>Product 1</p>
+                    <p>$ 300</p>
+                </div>
+                <div class="card-buttons">
+                    <a href="#"><button type="button">View</button></a>
+                    <a href="#"><button type="button">Add to Cart</button></a>
+                </div>
+            </div>
+            <div class="product-card">
+                <div class="product-image">
+                    <img src="images/apples-805124.jpg" alt="" width="100%">
+                </div>
+                <div class="product-information">
+                    <p>Product 1</p>
+                    <p>$ 300</p>
+                </div>
+                <div class="card-buttons">
+                    <a href="#"><button type="button">View</button></a>
+                    <a href="#"><button type="button">Add to Cart</button></a>
+                </div>
+            </div>
+            <div class="product-card">
+                <div class="product-image">
+                    <img src="images/apples-805124.jpg" alt="" width="100%">
+                </div>
+                <div class="product-information">
+                    <p>Product 1</p>
+                    <p>$ 300</p>
+                </div>
+                <div class="card-buttons">
+                    <a href="#"><button type="button">View</button></a>
+                    <a href="#"><button type="button">Add to Cart</button></a>
+                </div>
+            </div>
+            <div class="product-card">
+                <div class="product-image">
+                    <img src="images/apples-805124.jpg" alt="" width="100%">
+                </div>
+                <div class="product-information">
+                    <p>Product 1</p>
+                    <p>$ 300</p>
+                </div>
+                <div class="card-buttons">
+                    <a href="#"><button type="button">View</button></a>
+                    <a href="#"><button type="button">Add to Cart</button></a>
+                </div>
+            </div>
+            <div class="product-card">
+                <div class="product-image">
+                    <img src="images/apples-805124.jpg" alt="" width="100%">
+                </div>
+                <div class="product-information">
+                    <p>Product 1</p>
+                    <p>$ 300</p>
+                </div>
+                <div class="card-buttons">
+                    <a href="#"><button type="button">View</button></a>
+                    <a href="#"><button type="button">Add to Cart</button></a>
+                </div>
+            </div>
+            <div class="product-card">
+                <div class="product-image">
+                    <img src="images/apples-805124.jpg" alt="" width="100%">
+                </div>
+                <div class="product-information">
+                    <p>Product 1</p>
+                    <p>$ 300</p>
+                </div>
+                <div class="card-buttons">
+                    <a href="#"><button type="button">View</button></a>
+                    <a href="#"><button type="button">Add to Cart</button></a>
+                </div>
+            </div>
+
         </div>
     </section>
 
@@ -82,6 +175,9 @@
         <li><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="m260-520 220-360 220 360H260ZM700-80q-75 0-127.5-52.5T520-260q0-75 52.5-127.5T700-440q75 0 127.5 52.5T880-260q0 75-52.5 127.5T700-80Zm-580-20v-320h320v320H120Zm580-60q42 0 71-29t29-71q0-42-29-71t-71-29q-42 0-71 29t-29 71q0 42 29 71t71 29Zm-500-20h160v-160H200v160Zm202-420h156l-78-126-78 126Zm78 0ZM360-340Zm340 80Z"/></svg><span class="foot-menu">Category</span></a></li>
         <li class="foot-cart"><a href="cart.html"><svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="M280-80q-33 0-56.5-23.5T200-160q0-33 23.5-56.5T280-240q33 0 56.5 23.5T360-160q0 33-23.5 56.5T280-80Zm400 0q-33 0-56.5-23.5T600-160q0-33 23.5-56.5T680-240q33 0 56.5 23.5T760-160q0 33-23.5 56.5T680-80ZM246-720l96 200h280l110-200H246Zm-38-80h590q23 0 35 20.5t1 41.5L692-482q-11 20-29.5 31T622-440H324l-44 80h480v80H280q-45 0-68-39.5t-2-78.5l54-98-144-304H40v-80h130l38 80Zm134 280h280-280Z"/></svg><span class="cart-count">0</span><span class="foot-menu">Cart</span></a></li>
     </ul>
+</div>
+
+
 </div>
 
 <script src="navbar.js"></script>
