new file:   Responsive Fixed Navigation Bar and Fixed Mobile- Devices Footer - HTML, CSS, JS/css/banner.jpg 	modified:   Responsive Fixed Navigation Bar and Fixed Mobile- Devices Footer - HTML, CSS, JS/css/main.css 	new file:   Responsive Fixed Navigation Bar and Fixed Mobile- Devices Footer - HTML, CSS, JS/header.html 	modified:   Responsive Fixed Navigation Bar and Fixed Mobile- Devices Footer - HTML, CSS, JS/index.html 	modified:   Responsive Fixed Navigation Bar and Fixed Mobile- Devices Footer - HTML, CSS, JS/navbar.html

--- a/Responsive Fixed Navigation Bar and Fixed Mobile- Devices Footer - HTML, CSS, JS/index.html
+++ b/Responsive Fixed Navigation Bar and Fixed Mobile- Devices Footer - HTML, CSS, JS/index.html
@@ -45,9 +45,13 @@
         </div>
     </nav>
 
-
-
 <div class="container">
+    <header>
+        <div class="hero-header">
+            <h1>bellaDIAMONDS</h1>
+        </div>
+    </header>
+    
     <section>
         <h3 class="section-title">Products</h3>
         <div class= "product-container">
