modified:   Responsive Fixed Navigation Bar and Fixed Mobile- Devices Footer - HTML, CSS, JS/css/main.css 	modified:   Responsive Fixed Navigation Bar and Fixed Mobile- Devices Footer - HTML, CSS, JS/index.html

--- a/Responsive Fixed Navigation Bar and Fixed Mobile- Devices Footer - HTML, CSS, JS/index.html
+++ b/Responsive Fixed Navigation Bar and Fixed Mobile- Devices Footer - HTML, CSS, JS/index.html
@@ -51,7 +51,7 @@
             <h1>bellaDIAMONDS</h1>
         </div>
     </header>
-    
+
     <section>
         <h3 class="section-title">Products</h3>
         <div class= "product-container">
@@ -97,7 +97,7 @@
             </div>
             <div class="product-card">
                 <div class="product-image">
-                    <img src="images/apples-805124.jpg" alt="" width="100%">
+                    <img src="images/avatar.png" alt="" width="100%">
                 </div>
                 <div class="product-information">
                     <p>Product 1</p>
