modified:   Responsive Fixed Navigation Bar and Fixed Mobile- Devices Footer - HTML, CSS, JS/css/main.css 	new file:   Responsive Fixed Navigation Bar and Fixed Mobile- Devices Footer - HTML, CSS, JS/images/elegance-18594_1280.jpg 	new file:   Responsive Fixed Navigation Bar and Fixed Mobile- Devices Footer - HTML, CSS, JS/images/elegance-20085_1280.jpg 	modified:   Responsive Fixed Navigation Bar and Fixed Mobile- Devices Footer - HTML, CSS, JS/index.html

--- a/Responsive Fixed Navigation Bar and Fixed Mobile- Devices Footer - HTML, CSS, JS/index.html
+++ b/Responsive Fixed Navigation Bar and Fixed Mobile- Devices Footer - HTML, CSS, JS/index.html
@@ -58,7 +58,46 @@
 
             <div class="product-card">
                 <div class="product-image">
+                    <img src="images/apples-805124.jpg" alt="">
+                </div>
+                <div class="product-information">
+                    <p>Product 1</p>
+                    <p>$ 300</p>
+                </div>
+                <div class="card-buttons">
+                    <a href="#"><button type="button">View</button></a>
+                    <a href="#"><button type="button">Add to Cart</button></a>
+                </div>
+            </div>
+            <div class="product-card">
+                <div class="product-image">
                     <img src="images/apples-805124.jpg" alt="" width="100%">
+                </div>
+                <div class="product-information">
+                    <p>Product 1</p>
+                    <p>$ 300</p>
+                </div>
+                <div class="card-buttons">
+                    <a href="#"><button type="button">View</button></a>
+                    <a href="#"><button type="button">Add to Cart</button></a>
+                </div>
+            </div>
+            <div class="product-card">
+                <div class="product-image">
+                    <img src="images/elegance-18594_1280.jpg" alt="" >
+                </div>
+                <div class="product-information">
+                    <p>Product 1</p>
+                    <p>$ 300</p>
+                </div>
+                <div class="card-buttons">
+                    <a href="#"><button type="button">View</button></a>
+                    <a href="#"><button type="button">Add to Cart</button></a>
+                </div>
+            </div>
+            <div class="product-card">
+                <div class="product-image">
+                    <img src="images/avatar.png" alt="" >
                 </div>
                 <div class="product-information">
                     <p>Product 1</p>
@@ -97,46 +136,7 @@
             </div>
             <div class="product-card">
                 <div class="product-image">
-                    <img src="images/avatar.png" alt="" width="100%">
-                </div>
-                <div class="product-information">
-                    <p>Product 1</p>
-                    <p>$ 300</p>
-                </div>
-                <div class="card-buttons">
-                    <a href="#"><button type="button">View</button></a>
-                    <a href="#"><button type="button">Add to Cart</button></a>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <img src="images/apples-805124.jpg" alt="" width="100%">
-                </div>
-                <div class="product-information">
-                    <p>Product 1</p>
-                    <p>$ 300</p>
-                </div>
-                <div class="card-buttons">
-                    <a href="#"><button type="button">View</button></a>
-                    <a href="#"><button type="button">Add to Cart</button></a>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <img src="images/apples-805124.jpg" alt="" width="100%">
-                </div>
-                <div class="product-information">
-                    <p>Product 1</p>
-                    <p>$ 300</p>
-                </div>
-                <div class="card-buttons">
-                    <a href="#"><button type="button">View</button></a>
-                    <a href="#"><button type="button">Add to Cart</button></a>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <img src="images/apples-805124.jpg" alt="" width="100%">
+                    <img src="images/elegance-20085_1280.jpg" alt="" width="100%">
                 </div>
                 <div class="product-information">
                     <p>Product 1</p>
