modified:   Responsive Fixed Navigation Bar and Fixed Mobile- Devices Footer - HTML, CSS, JS/cart.html 	modified:   Responsive Fixed Navigation Bar and Fixed Mobile- Devices Footer - HTML, CSS, JS/css/main.css 	modified:   Responsive Fixed Navigation Bar and Fixed Mobile- Devices Footer - HTML, CSS, JS/login.html 	modified:   Responsive Fixed Navigation Bar and Fixed Mobile- Devices Footer - HTML, CSS, JS/navbar.html 	new file:   Responsive Fixed Navigation Bar and Fixed Mobile- Devices Footer - HTML, CSS, JS/product.html 	modified:   Responsive Fixed Navigation Bar and Fixed Mobile- Devices Footer - HTML, CSS, JS/register.html

--- a/Responsive Fixed Navigation Bar and Fixed Mobile- Devices Footer - HTML, CSS, JS/cart.html
+++ b/Responsive Fixed Navigation Bar and Fixed Mobile- Devices Footer - HTML, CSS, JS/cart.html
@@ -11,7 +11,7 @@
     <div class="cart-container">
         <table>
             <div class="continue-shopping">
-                <a href="navbar.html"><button>&larr; Continue Shopping</button></a>
+                <a href="index.html"><button>&larr; Continue Shopping</button></a>
             </div>
             <hr>
             <thead>
