--- a/Responsive Fixed Navigation Bar and Fixed Mobile- Devices Footer - HTML, CSS, JS/navbar.html
+++ b/Responsive Fixed Navigation Bar and Fixed Mobile- Devices Footer - HTML, CSS, JS/navbar.html
@@ -11,7 +11,7 @@
     <nav>
         <div class="navbar">
             <div class="navbar-mobile">
-                <a href="#" class="logo">SqCodes</a>
+                <a href="index.html" class="logo">SqCodes</a>
                 <li class="dropdown hide">
                     <a href="#" class="dropdown account-link ">My Account&#9662</a>
                     <div class="dropdown-content">
@@ -25,7 +25,7 @@
             </div>
             <div class="navbar-links" id="navbar-links">
                 <ul>
-                    <li><a href="navbar.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="#">Products&#9662;</a></li>
                     <li><a href="#">Category&#9662;</a></li>
                     <li class="dropdown hide-on-mobile">
