--- a/Responsive Fixed Navigation Bar and Fixed Mobile- Devices Footer - HTML, CSS, JS/register.html
+++ b/Responsive Fixed Navigation Bar and Fixed Mobile- Devices Footer - HTML, CSS, JS/register.html
@@ -15,7 +15,7 @@
             <div class="form-container">
                 <form action="" method="post" class="register-form">
                     <div class="img">
-                        <span id="close-signup-form" class="close"><a href="navbar.html">&times;</a></span>
+                        <span id="close-signup-form" class="close"><a href="index.html">&times;</a></span>
                         <img src="images/avatar.png" alt="avatar" class="avatar" width="20%"> 
                     </div>
                     <div class="login-container">
@@ -38,7 +38,7 @@
                         
                     </div>
                     <div class="login-container">
-                        <button type="button" class="cancelbtn" id="cancel-signup-button"><a href="navbar.html">Cancel</a></button>
+                        <button type="button" class="cancelbtn" id="cancel-signup-button"><a href="index.html">Cancel</a></button>
                         <span class="password">Already have accout? <a href="login.html">Login.</a></span>
                     </div>
                 </form>
