--- a/Responsive Fixed Navigation Bar and Fixed Mobile- Devices Footer - HTML, CSS, JS/login.html
+++ b/Responsive Fixed Navigation Bar and Fixed Mobile- Devices Footer - HTML, CSS, JS/login.html
@@ -14,7 +14,7 @@
         <div class="form-container">
             <form action="" method="post" class="login-form">
                 <div class="img">
-                    <span id="close" class="close"><a href="navbar.html">&times;</a></span>
+                    <span id="close" class="close"><a href="index.html">&times;</a></span>
                     <img src="images/avatar.png" alt="avatar" class="avatar" width="20%"> 
                 </div>
                 <div class="login-container">
@@ -30,7 +30,7 @@
                     </label>
                 </div>
                 <div class="login-container">
-                    <button type="button" class="cancelbtn" id="cancelbtn"><a href="navbar.html">Cancel</a></button>
+                    <button type="button" class="cancelbtn" id="cancelbtn"><a href="index.html">Cancel</a></button>
                     <span class="password">No account <a href="register.html">Register?</a></span>
                     <span class="password">Forgot <a href="">password?</a></span>
                 </div>
