modified:   Responsive Fixed Navigation Bar and Fixed Mobile- Devices Footer - HTML, CSS, JS/css/main.css 	modified:   Responsive Fixed Navigation Bar and Fixed Mobile- Devices Footer - HTML, CSS, JS/index.html 	modified:   Responsive Fixed Navigation Bar and Fixed Mobile- Devices Footer - HTML, CSS, JS/product.html

--- a/Responsive Fixed Navigation Bar and Fixed Mobile- Devices Footer - HTML, CSS, JS/index.html
+++ b/Responsive Fixed Navigation Bar and Fixed Mobile- Devices Footer - HTML, CSS, JS/index.html
@@ -65,7 +65,7 @@
                     <p>$ 300</p>
                 </div>
                 <div class="card-buttons">
-                    <a href="#"><button type="button">View</button></a>
+                    <a href="product.html"><button type="button" id="product-view">View</button></a>
                     <a href="#"><button type="button">Add to Cart</button></a>
                 </div>
             </div>
