--- a/Responsive Fixed Navigation Bar and Fixed Mobile- Devices Footer - HTML, CSS, JS/product.html
+++ b/Responsive Fixed Navigation Bar and Fixed Mobile- Devices Footer - HTML, CSS, JS/product.html
@@ -9,7 +9,12 @@
 <body>
     
     <div class="product-container">
+    
         <div class="product-image-card">
+            <div class="continue-shopping">
+                <a href="index.html"><button>&larr; Back to Home</button></a>
+            </div>
+
             <div class="profile-image">
                 <img src="images/apples-805124.jpg" alt="Product" width="100%">
             </div>
