--- a/12.Ecommerce Website Templates - HTML, CSS, JS/index.html
+++ b/12.Ecommerce Website Templates - HTML, CSS, JS/index.html
@@ -40,7 +40,7 @@
                 </ul>
             </div>
             <div class="cart">
-                <a href="cart.html"><svg xmlns="http://www.w3.org/2000/svg" height="20" viewBox="0 -960 960 960" width="24"><path d="M280-80q-33 0-56.5-23.5T200-160q0-33 23.5-56.5T280-240q33 0 56.5 23.5T360-160q0 33-23.5 56.5T280-80Zm400 0q-33 0-56.5-23.5T600-160q0-33 23.5-56.5T680-240q33 0 56.5 23.5T760-160q0 33-23.5 56.5T680-80ZM246-720l96 200h280l110-200H246Zm-38-80h590q23 0 35 20.5t1 41.5L692-482q-11 20-29.5 31T622-440H324l-44 80h480v80H280q-45 0-68-39.5t-2-78.5l54-98-144-304H40v-80h130l38 80Zm134 280h280-280Z"/></svg><span class="cart-count">0</span></a>
+                <a href="cart.html"><svg xmlns="http://www.w3.org/2000/svg" height="20" viewBox="0 -960 960 960" width="24"><path d="M280-80q-33 0-56.5-23.5T200-160q0-33 23.5-56.5T280-240q33 0 56.5 23.5T360-160q0 33-23.5 56.5T280-80Zm400 0q-33 0-56.5-23.5T600-160q0-33 23.5-56.5T680-240q33 0 56.5 23.5T760-160q0 33-23.5 56.5T680-80ZM246-720l96 200h280l110-200H246Zm-38-80h590q23 0 35 20.5t1 41.5L692-482q-11 20-29.5 31T622-440H324l-44 80h480v80H280q-45 0-68-39.5t-2-78.5l54-98-144-304H40v-80h130l38 80Zm134 280h280-280Z"/></svg><span class="cart-count" id="cart_quantity">0</span></a>
             </div>
         </div>
     </nav>
@@ -66,7 +66,7 @@
                 </div>
                 <div class="card-buttons">
                     <a href="product.html"><button type="button" id="product-view">View</button></a>
-                    <a href="#"><button type="button">Add to Cart</button></a>
+                    <a href="#"><button type="button" id="add-cart">Add to Cart</button></a>
                 </div>
             </div>
             <div class="product-card">
@@ -184,6 +184,31 @@
 
 </div>
 
+
+<script>
+    $(document).on('click', '#add-cart', function(e){
+        e.preventDefault();
+        $.ajax({
+            type: 'POST',
+            url: '{% url "cart_add" %}',
+            data: {
+                product_id: $('#add-cart').val(),
+                product_qty: $('#qty-cart option:selected').text(),
+                csrfmiddlewaretoken: '{{ csrf_token }}',
+                action: 'post'
+            },
+
+            success: function(json){
+                // console.log(json)
+                document.getElementById("cart_quantity").textContent = json.qty
+            },
+
+            error: function(xhr, errmsg, err){
+
+            }
+        });
+    })
+</script>
 <script src="navbar.js"></script>
 </body>
 </html>
