modified:   12.Ecommerce Website Templates - HTML, CSS, JS/navbar.html 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/include/navbar.html

--- a/12.Ecommerce Website Templates - HTML, CSS, JS/navbar.html
+++ b/12.Ecommerce Website Templates - HTML, CSS, JS/navbar.html
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Responsive Navigation Bar</title>
+  <link rel="stylesheet" href="css/navbar.css">
+</head>
+<body>
 
     <nav>
         <div class="navbar">
@@ -37,3 +46,6 @@
 
 
 
+
+</body>
+</html>
