modified:   16. Ecommerce Management Portal Template - HTML, CSS, JS/index.html

--- a/16. Ecommerce Management Portal Template - HTML, CSS, JS/index.html
+++ b/16. Ecommerce Management Portal Template - HTML, CSS, JS/index.html
@@ -17,7 +17,7 @@
                     <a href="#" class="dropdown account-link ">My Account</a>
 
                 </li>
-                <a href="login.html" class="cart-mobile hide" id="login-button">Logout</a>
+                <a href="#" class="cart-mobile hide" id="login-button">Logout</a>
                 
                 <a href="#" class="hide toggle-button" id="toggler" style="font-size: 30px;">&#8801;</a>
             </div>
@@ -33,7 +33,7 @@
                 </ul>
             </div>
             <div class="cart">
-                <a href="login.html" class="login-button" id="login-button">Logout</a>
+                <a href="#" class="login-button" id="login-button">Logout</a>
             </div>
         </div>
     </nav>
@@ -42,7 +42,7 @@
 
 <div class="container">
     
-    </section>
+   
 
 
 </div>
