--- a/16. Ecommerce Management Portal Template - HTML, CSS, JS/index.html
+++ b/16. Ecommerce Management Portal Template - HTML, CSS, JS/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="navbar.css">
 </head>
 <body>
-
+<div class="admin-dashboard">
     <nav>
         <div class="navbar">
             <div class="navbar-mobile">
@@ -41,8 +41,20 @@
 
 
 <div class="container">
-    
-   
+    <div class="content">
+        <div class="side-bar">
+            <h1>hello</h1>
+        </div>
+        
+        <div class="main-content">
+            <h1>hello</h1>
+        </div>
+
+        <div class="side-right">
+            <h1>hello</h1>
+        </div>
+    </div>
+
 
 
 </div>
@@ -60,7 +72,7 @@
         <li class="foot-cart"><a href="cart.html"><svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="M280-80q-33 0-56.5-23.5T200-160q0-33 23.5-56.5T280-240q33 0 56.5 23.5T360-160q0 33-23.5 56.5T280-80Zm400 0q-33 0-56.5-23.5T600-160q0-33 23.5-56.5T680-240q33 0 56.5 23.5T760-160q0 33-23.5 56.5T680-80ZM246-720l96 200h280l110-200H246Zm-38-80h590q23 0 35 20.5t1 41.5L692-482q-11 20-29.5 31T622-440H324l-44 80h480v80H280q-45 0-68-39.5t-2-78.5l54-98-144-304H40v-80h130l38 80Zm134 280h280-280Z"/></svg><span class="cart-count">0</span><span class="foot-menu">Cart</span></a></li>
     </ul>
 </div>
-
+</div>
 <script src="navbar.js"></script>
 </body>
 </html>
