modified:   16. Ecommerce Management Portal Template - HTML, CSS, JS/index.html 	modified:   16. Ecommerce Management Portal Template - HTML, CSS, JS/main.css

--- a/16. Ecommerce Management Portal Template - HTML, CSS, JS/index.html
+++ b/16. Ecommerce Management Portal Template - HTML, CSS, JS/index.html
@@ -73,7 +73,7 @@
                     <h1>hello</h1>
                 </div>
             </div>
-
+            <section>
             <div class="orders">
                 <h1>Recent Orders</h1>
                 <table>
@@ -125,6 +125,15 @@
                     </tbody>
                 </table>
             </div>
+        </section>
+
+        <section>
+            
+        </section>
+
+        <section>
+
+        </section>
         </div>
 
         <div class="side-right">
@@ -149,7 +158,7 @@
                     <p>Hello. Am Jane...</p>
                 </div>
             </div>
-
+            <h1>Cancelled Order</h1>
             <div class="cancelled_orders">
                 <div class="cancelled_order">
                     <p>Hello. Am Jane...</p>
